--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <p class="hero-text-design"> &nbsp;&nbsp;From &nbsp;&nbsp;grilled &nbsp;&nbsp;Tandoori &nbsp;&nbsp;chicken &nbsp;&nbsp;burgers &nbsp;&nbsp;to &nbsp;&nbsp;simple &nbsp;&nbsp;chicken &nbsp;&nbsp;burgers &nbsp;&nbsp;with &nbsp;&nbsp;garlic &nbsp;&nbsp;rosemary &nbsp;&nbsp;mayonnaise, &nbsp;&nbsp;put &nbsp;&nbsp;a &nbsp;&nbsp;new &nbsp;&nbsp;twist  &nbsp;&nbsp;on  &nbsp;&nbsp;an  &nbsp;&nbsp;old &nbsp;&nbsp; barbecue &nbsp;&nbsp; favourite  &nbsp;&nbsp;with  &nbsp;&nbsp;these  &nbsp;&nbsp;unique  &nbsp;&nbsp;and  &nbsp;&nbsp;chicken  &nbsp;&nbsp;burger  &nbsp;&nbsp;recipes.  &nbsp;&nbsp;Do  &nbsp;&nbsp;you  &nbsp;&nbsp;see  &nbsp;&nbsp;any  &nbsp;&nbsp;Teletubbies  &nbsp;&nbsp;in  &nbsp;&nbsp;here?  &nbsp;&nbsp;Do  &nbsp;&nbsp;you  &nbsp;&nbsp;see  &nbsp;&nbsp;a  &nbsp;&nbsp;slender  &nbsp;&nbsp;plastic  &nbsp;&nbsp;tag  &nbsp;&nbsp;clipped  &nbsp;&nbsp;to  &nbsp;my  &nbsp;&nbsp;shirt &nbsp;&nbsp; with  &nbsp;&nbsp; my  &nbsp;&nbsp;name &nbsp;&nbsp; printed  &nbsp;&nbsp;on  &nbsp;&nbsp;it  &nbsp;&nbsp;with  &nbsp;&nbsp;awesome  &nbsp;&nbsp;katchep</p>
                 </div>
                 <div class="buttons">
-                    <button class="red-button">OUR EXPERIENCES</button>
-                    <button class="black-button">OUR MENU</button>
+                    <button class="red-button"><p class="button-text-size">OUR EXPERIENCES</p></button>
+                    <button class="black-button"><p class="button-text-size">OUR MENU</p></button>
                 </div>
             </div>
             <div class="hero-pic">
