--- a/index.html
+++ b/index.html
@@ -35,5 +35,24 @@
                 <img src="https://miraclestudio.design/html/deliciousa-html/assets/images/about/about6.png" alt="">
             </div>
     </div>
+    <div class="food-menu">
+        <!-- <p class="menu-heading">crispy, every bite taste</p> -->
+        <p class="sec-menu-heading">popular food items</p>
+        <div class="menu-cards">
+            <div class="food-items">
+                <div class="burger-div"><img src="./burger.png" alt="" class="burger-pic">
+                    <div class="burger-line"></div>
+                    <p class="burger-text">PRO PIZZA</p>
+                    <p class="burger-text-sec">5 PRODUCTS</p>
+                </div>
+            <div class="fries-div"><img src="./french-fry.png" alt="" class="fries-pic">
+                    <div class="fries-line"></div>
+                    <p class="fries-text">PRO PIZZA</p>
+                    <p class="fries-text-sec">5 PRODUCTS</p>  
+            </div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+            </div>
+        </div>
 </body>
 </html>
