--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
                     <p class="fries-text">PRO PIZZA</p>
                     <p class="fries-text-sec">5 PRODUCTS</p>  
             </div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                <div class="pasta-div"><img src="./pasta.png" alt="" class="pasta-pic">
+                    <div class="pasta-line"></div>
+                    <p class="pasta-text">PRO PIZZA</p>
+                    <p class="pasta-text-sec">5 PRODUCTS</p> 
+                </div>
+                <div class="pizza-div"><img src="./pizza.png" alt="" class="pizza-pic">
+                    <div class="pizza-line"></div>
+                    <p class="pizza-text">PRO PIZZA</p>
+                    <p class="pizza-text-sec">5 PRODUCTS</p> 
+                </div>
             </div>
         </div>
 </body>
