--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="nav-bar">
@@ -38,29 +39,180 @@
     <div class="food-menu">
         <!-- <p class="menu-heading">crispy, every bite taste</p> -->
         <p class="sec-menu-heading">popular food items</p>
-        <div class="menu-cards">
-            <div class="food-items">
-                <div class="burger-div"><img src="./burger.png" alt="" class="burger-pic">
-                    <div class="burger-line"></div>
-                    <p class="burger-text">PRO PIZZA</p>
-                    <p class="burger-text-sec">5 PRODUCTS</p>
+        <div class="food-row">
+            <div class="menu-cards">
+                <div class="food-items">
+                    <div class="burger-div"><img src="./burger.png" alt="" class="burger-pic">
+                        <div class="burger-line"></div>
+                        <p class="burger-text">PRO PIZZA</p>
+                        <p class="burger-text-sec">5 PRODUCTS</p>
+                    </div>
+                <div class="fries-div"><img src="./french-fry.png" alt="" class="fries-pic">
+                        <div class="fries-line"></div>
+                        <p class="fries-text">PRO PIZZA</p>
+                        <p class="fries-text-sec">5 PRODUCTS</p>  
                 </div>
-            <div class="fries-div"><img src="./french-fry.png" alt="" class="fries-pic">
-                    <div class="fries-line"></div>
-                    <p class="fries-text">PRO PIZZA</p>
-                    <p class="fries-text-sec">5 PRODUCTS</p>  
+                    <div class="pasta-div"><img src="./pasta.png" alt="" class="pasta-pic">
+                        <div class="pasta-line"></div>
+                        <p class="pasta-text">PRO PIZZA</p>
+                        <p class="pasta-text-sec">5 PRODUCTS</p> 
+                    </div>
+                    <div class="pizza-div"><img src="./pizza.png" alt="" class="pizza-pic">
+                        <div class="pizza-line"></div>
+                        <p class="pizza-text">PRO PIZZA</p>
+                        <p class="pizza-text-sec">5 PRODUCTS</p> 
+                    </div>
+                </div>
             </div>
-                <div class="pasta-div"><img src="./pasta.png" alt="" class="pasta-pic">
-                    <div class="pasta-line"></div>
-                    <p class="pasta-text">PRO PIZZA</p>
-                    <p class="pasta-text-sec">5 PRODUCTS</p> 
+            <div class="sec-row-menu">
+                <div class="ruti-over-all">
+                    <div class="ruti-div"><img src="./beef-ruti.png" alt="" class="ruti-pic"></div>
+                    <div class="ruti-price">
+                        <p class="ruti-discount">-5%</p>
+                        <p class="ruti-orginal-price">$30.52</p>
+                        <p class="ruti-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="ruti-text">RUTI WITH BEEF SLICE</p>
+                        <div class="">
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
                 </div>
-                <div class="pizza-div"><img src="./pizza.png" alt="" class="pizza-pic">
-                    <div class="pizza-line"></div>
-                    <p class="pizza-text">PRO PIZZA</p>
-                    <p class="pizza-text-sec">5 PRODUCTS</p> 
+                <div class="burger-two-over-all">
+                    <div class="burger-two-div"><img src="./burger-2.png" alt="" class="burger-two-pic"></div>
+                    <div class="burger-two-price">
+                        <p class="burger-two-discount">-5%</p>
+                        <p class="burger-two-orginal-price">$30.52</p>
+                        <p class="burger-two-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="burger-two-text">RUTI WITH BEEF SLICE</p>
+                        <div>
+                            <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="pasta-two-over-all">
+                    <div class="pasta-two-div"><img src="./pasta-2.png" alt="" class="pasta-two-pic"></div>
+                    <div class="pasta-two-price">
+                        <p class="pasta-two-discount">-5%</p>
+                        <p class="pasta-two-orginal-price">$30.52</p>
+                        <p class="pasta-two-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="pasta-two-text">RUTI WITH BEEF SLICE</p>
+                        <div>
+                            <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="pizza-two-over-all">
+                    <div class="pizza-two-div"><img src="./pizza-2.png" alt="" class="pizza-two-pic"></div>
+                    <div class="pizza-two-price">
+                        <p class="pizza-two-discount">-5%</p>
+                        <p class="pizza-two-orginal-price">$30.52</p>
+                        <p class="pizza-two-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="pizza-two-text">RUTI WITH BEEF SLICE</p>
+                        <div class="">
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
+            </div>
+            </div>
+            <div class="third-row-menu">
+                <div class="set-one-over-all">
+                    <div class="set-one-div"><img src="./main-food-2.png" alt="" class="set-one-pic"></div>
+                    <div class="set-one-price">
+                        <p class="set-one-discount">-5%</p>
+                        <p class="set-one-orginal-price">$30.52</p>
+                        <p class="set-one-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="set-one-text">RUTI WITH BEEF SLICE</p>
+                        <div class="">
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="set-two-over-all">
+                    <div class="set-two-div"><img src="./ruti.png" alt="" class="set-two-pic"></div>
+                    <div class="set-two-price">
+                        <p class="set-two-discount">-5%</p>
+                        <p class="set-two-orginal-price">$30.52</p>
+                        <p class="set-two-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="set-two-text">RUTI WITH BEEF SLICE</p>
+                        <div class="">
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="set-three-over-all">
+                    <div class="set-three-div"><img src="./grilled-2.png" alt="" class="set-three-pic"></div>
+                    <div class="set-three-price">
+                        <p class="set-three-discount">-5%</p>
+                        <p class="set-three-orginal-price">$30.52</p>
+                        <p class="set-three-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="set-three-text">RUTI WITH BEEF SLICE</p>
+                        <div>
+                            <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="set-four-over-all">
+                    <div class="set-four-div"><img src="./delicious-burger.png" alt="" class="set-four-pic"></div>
+                    <div class="set-four-price">
+                        <p class="set-four-discount">-5%</p>
+                        <p class="set-four-orginal-price">$30.52</p>
+                        <p class="set-four-cost">$28.52</p>
+                    </div>
+                    <div class="rating">
+                        <p class="set-four-text">RUTI WITH BEEF SLICE</p>
+                        <div class="">
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #FFB936"></i>
+                        <i class="fa-solid fa-star fa-sm" style="color:  #ffffff;"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 </body>
 </html>
