--- a/index.html
+++ b/index.html
@@ -214,5 +214,18 @@
             </div>
         </div>
     </div>
+    <div class="boxes">
+        <div class="first-box">
+            <div class="first-box-texts">
+                <p class="first-box-text">CRISPY, EVERY BITE TASTE</p>
+            <p class="first-box-sec-text">SUPER</p>
+            <p class="first-box-third-text">DELICIOUS</p>
+            <p class="first-box-fourth-text">50%</p>
+            <p class="first-box-fifth-text">OFF</p>
+            </div>
+            <img src="./family-set.png" alt="" class="first-box-pic">
+        </div>
+        <div class="sec-box"></div>
+    </div>
 </body>
 </html>
