--- a/index.html
+++ b/index.html
@@ -215,17 +215,42 @@
         </div>
     </div>
     <div class="boxes">
-        <div class="first-box">
-            <div class="first-box-texts">
+        <div class="two-boxes">
+            <div class="first-box">
+                <div class="first-box-texts">
                 <p class="first-box-text">CRISPY, EVERY BITE TASTE</p>
-            <p class="first-box-sec-text">SUPER</p>
-            <p class="first-box-third-text">DELICIOUS</p>
-            <p class="first-box-fourth-text">50%</p>
-            <p class="first-box-fifth-text">OFF</p>
+                <p class="first-box-sec-text">SUPER</p>
+                <p class="first-box-third-text">DELICIOUS</p>
+                <p class="first-box-fourth-text">50%</p>
+                <p class="first-box-fifth-text">OFF</p>
+                </div>
+                <img src="./family-set.png" alt="" class="first-box-pic">
             </div>
-            <img src="./family-set.png" alt="" class="first-box-pic">
+            <div class="sec-box">
+                <div class="sec-box-texts">
+                    <p class="sec-box-text">Super</p>
+                    <p class="sec-box-sec-text">Delicious</p>
+                    <div class="sec-box-text-centre">
+                        <p class="sec-box-third-text">Cheese</p>
+                        <span class="sec-box-third-text-in">Pizza</span>
+                    </div>
+                    <p class="sec-box-fourth-text">Limited Offer</p>
+                </div>
+                <img src="./pizza-sec-box.png" alt="" class="sec-box-pic">
+            </div>
         </div>
-        <div class="sec-box"></div>
+        <div class="logo-heading">
+            <p class="logo-headings">Global <span class="logo-heading-colour"> 5K+ </span> Happy Sponsors With us</p>
+            <div class="logo-line"><hr></div>
+        </div>
+        <div class="logos-position">
+            <img src="./restaurant-logo.svg" alt="" class="logos">
+            <img src="./chicken-restaurant-logo.svg" alt="" class="logos">
+            <img src="./pizza-restaurant-logo.svg" alt="" class="logos">
+            <img src="./cook-tv-channel-logo.svg" alt="" class="logos">
+            <img src="./banquet-logo.svg" alt="" class="logos">
+            <img src="./organge-cafe-logo.svg" alt="" class="logos">
+        </div>
     </div>
 </body>
 </html>
