--- a/index.html
+++ b/index.html
@@ -252,5 +252,16 @@
             <img src="./organge-cafe-logo.svg" alt="" class="logos">
         </div>
     </div>
+    <div class="ending">
+        <div class="delivery-box">
+            <div class="delivery-box-texts">
+                <p class="delivery-box-text">CRISPY, EVERY BITE TASTE</p>
+                <p class="delivery-box-sec-text">30 MINUTES FAST</p>
+                <p class="delivery-box-third-text"><span class="delivery-box-third-text-in">DELIVERY</span> CHALLAGE</p>
+                <button class="delivery-button"><i class="fa-light fa-truck-fast"></i><span class="delivery-button-text">ORDER NOW</span></button>
+            </div>
+            <img src="./bike-man.png" alt="" class="delivery-box-pic">
+        </div>
+    </div>
 </body>
 </html>
