--- a/index.html
+++ b/index.html
@@ -263,5 +263,25 @@
             <img src="./bike-man.png" alt="" class="delivery-box-pic">
         </div>
     </div>
+    <div class="create-reservation">
+        <div class="create-reservation-first-box">
+            <p class="create-reservation-text">CRISPY, EVERY BITE TASTE</p>
+            <P class="create-reservation-sec-text">NEED BOOKING?</P>
+            <P class="create-reservation-third-text">RESERVE YOUR TABLE?</P>
+        <div class="call-icon-div">
+            <div class="call-icon-div-in">
+                <img src="./call-icon.png" alt="" class="call-icon">
+            </div>
+            <div class="call-icon-texts">
+                <p class="call-icon-text">24/7 SUPPORT CENTER</p>
+                <p class="call-icon-sec-text">+1718-904-4450</p>
+            </div>
+        </div>
+        </div>
+        <div class="create-reservation-sec-box">
+            <h4 class="create-reservation-sec-box-text">CREAT AND RESERVATION</h4>
+            <!-- <asdiv cls="people">People</div> -->
+        </div>
+    </div>
 </body>
 </html>
