--- a/index.html
+++ b/index.html
@@ -280,7 +280,20 @@
         </div>
         <div class="create-reservation-sec-box">
             <h4 class="create-reservation-sec-box-text">CREAT AND RESERVATION</h4>
-            <!-- <asdiv cls="people">People</div> -->
+            <div class="people">
+                <p class="people-text">people</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path fill="#fff" d="m12 15.4l-6-6L7.4 8l4.6 4.6L16.6 8L18 9.4z" />
+                </svg>
+            </div>
+            <div class="ph">
+                <p class="ph-number">Phone Number</p>
+                <i class="fa-sharp fa-solid fa-phone" style="color: #ffffff;"></i>
+            </div>
+            <div class="age">
+                <p class="age-choosing">Mm/Dd/Yyyy</p>
+                <i class="fa-regular fa-calendar" style="color: #ffffff;"></i>
+            </div>
         </div>
     </div>
 </body>
