--- a/index.html
+++ b/index.html
@@ -294,6 +294,71 @@
                 <p class="age-choosing">Mm/Dd/Yyyy</p>
                 <i class="fa-regular fa-calendar" style="color: #ffffff;"></i>
             </div>
+            <div class="book-now-div">
+                <p class="book-now">BOOKING NOW</p>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-first-box">
+            <img src="https://foodking-react.vercel.app/assets/img/logo/logo.svg" class="logo-sec">
+            <p class="footer-text">We believe it has the power to do amazing things.</p>
+            <p class="footer-sec-text">Interested in working with us?</p>
+            <p class="footer-third-text">info@example.com</p>
+            <div class="footer-first-icons">
+                <div class="fb-div">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </div>
+                <div class="twitter-div">
+                    <i class="fa-brands fa-twitter" style="color: #000000;"></i>
+                </div>
+                <div class="vimeo-div">
+                    <i class="fa-brands fa-vimeo-v" style="color: #000000;"></i>
+                </div>
+                <div class="pinterest-div">
+                    <i class="fa-brands fa-pinterest-p" style="color: #000000;"></i>
+                </div>
+            </div>
+        </div>
+        <div class="footer-sec-to-fifth">
+            <div class="footer-sec-box">
+                <p class="sec-footer-h">Quick Links</p>
+                <div class="footer-sec-box-links">
+                    <a href="" class="footer-sec-box-links-designs">Services</a>
+                    <a href="" class="footer-sec-box-links-designs">About company</a>
+                    <a href="" class="footer-sec-box-links-designs">latest news</a>
+                    <a href="" class="footer-sec-box-links-designs">team member</a>
+                    <a href="" class="footer-sec-box-links-designs">testimonials</a>
+                </div>
+            </div>
+            <div class="footer-third-box">
+                <p class="thrid-footer-h">My Account</p>
+                <div class="footer-third-box-links">
+                    <a href="" class="footer-third-box-links-designs">My Profile</a>
+                    <a href="" class="footer-third-box-links-designs">My Order History</a>
+                    <a href="" class="footer-third-box-links-designs">My Wish List</a>
+                    <a href="" class="footer-third-box-links-designs">Order Tracking</a>
+                    <a href="" class="footer-third-box-links-designs">Shopping Cart</a>
+                </div>
+            </div>
+            <div class="footer-fourth-box">
+                <p class="fourth-footer-h">Address:</p>
+                <p class="fourth-footer-text">570 8th Ave, NEW YORK,NY</p>
+                <p class="fourth-footer-sec-text"><span class="fourth-footer-third-text">10018</span>United States</p>
+                <p class="fourth-footer-sec-h">Hours:</p>
+                <p class="fourth-footer-fourth-text">9.30am – 6.30pm</p>
+                <p class="fourth-footer-fifth-text">Monday to Friday</p>
+            </div>
+            <div class="footer-fifth-box">
+                <p class="fifth-footer-h">Install app</p>
+                <p class="fifth-footer-text">FROM APP STORE OR GOOGLE PLAY</p>
+                <div class="fifth-footer-pics">
+                    <img src="./app-store.png" alt="">
+                    <img src="./google-play.png" alt="">
+                </div>
+                <p class="fifth-footer-sec-text">24/7 SUPPORT CENTER</p>
+                <p class="fifth-footer-third-text">+1718-904-4450</p>
+            </div>
         </div>
     </div>
 </body>
